--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,13 +3,7 @@ name: Build ShareX
 on:
   push:
     branches:
-      - "**"
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
-    paths-ignore:
-      - "**/*.md"
-      - "**/*.gitignore"
-      - "**/*.gitattributes"
+      - release
 
 permissions:
   contents: read
@@ -24,10 +18,6 @@ jobs:
       matrix:
         configuration:
           - Release
-          - Debug
-          - Steam
-          - MicrosoftStore
-          - MicrosoftStoreDebug
         platform:
           - Any CPU
 
@@ -93,138 +83,3 @@ jobs:
         with:
           name: Portable
           path: Output\ShareX-${{ env.APP_VERSION }}-portable.zip
-
-      - name: Upload artifact (Debug)
-        if: matrix.configuration == 'Debug'
-        uses: actions/upload-artifact@v4
-        with:
-          name: Debug
-          path: Output\ShareX-${{ env.APP_VERSION }}-debug.zip
-
-      - name: Upload artifact (Steam)
-        if: matrix.configuration == 'Steam'
-        uses: actions/upload-artifact@v4
-        with:
-          name: Steam
-          path: Output\ShareX-${{ env.APP_VERSION }}-Steam.zip
-
-      - name: Upload artifact (MicrosoftStore)
-        if: matrix.configuration == 'MicrosoftStore'
-        uses: actions/upload-artifact@v4
-        with:
-          name: MicrosoftStore
-          path: Output\ShareX-${{ env.APP_VERSION }}.appx
-
-      - name: Upload artifact (MicrosoftStoreDebug)
-        if: matrix.configuration == 'MicrosoftStoreDebug'
-        uses: actions/upload-artifact@v4
-        with:
-          name: MicrosoftStoreDebug
-          path: Output\ShareX-${{ env.APP_VERSION }}-debug.appx
-
-  release:
-    name: Release
-    needs: build
-    if: github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/tags/v')
-    runs-on: windows-latest
-
-    permissions:
-      contents: write
-
-    env:
-      REPO_DEV_BUILDS: ${{ github.repository_owner }}/DevBuilds
-      RELEASE_BODY_PATH: RELEASE_BODY.md
-      APP_VERSION: ${{ needs.build.outputs.APP_VERSION }}
-
-    steps:
-      - name: Download artifact (Setup)
-        uses: actions/download-artifact@v4
-        with:
-          name: Setup
-          path: Output
-
-      - name: Download artifact (Portable)
-        uses: actions/download-artifact@v4
-        with:
-          name: Portable
-          path: Output
-
-      - name: Download artifact (Debug)
-        if: github.ref == 'refs/heads/develop'
-        uses: actions/download-artifact@v4
-        with:
-          name: Debug
-          path: Output
-
-      - name: Download artifact (Steam)
-        if: github.ref == 'refs/heads/develop'
-        uses: actions/download-artifact@v4
-        with:
-          name: Steam
-          path: Output
-
-      - name: Download artifact (MicrosoftStore)
-        if: github.ref == 'refs/heads/develop'
-        uses: actions/download-artifact@v4
-        with:
-          name: MicrosoftStore
-          path: Output
-
-      - name: Download artifact (MicrosoftStoreDebug)
-        if: github.ref == 'refs/heads/develop'
-        uses: actions/download-artifact@v4
-        with:
-          name: MicrosoftStoreDebug
-          path: Output
-
-      - name: Create release body file
-        run: |
-          $checksums = Get-ChildItem -Path "Output\" -Recurse -File
-            | Sort-Object -Property Name
-            | ForEach-Object { "| $($_.Name) | ``$((Get-FileHash $_.FullName -Algorithm SHA256).Hash)`` |" }
-            | Out-String
-          $output = "| File | SHA256 |`r`n| --- | --- |`r`n$($checksums.Trim())"
-          echo $output >> $env:GITHUB_STEP_SUMMARY
-          if ($env:GITHUB_REF.StartsWith("refs/tags/v")) {
-            $output = "**Changelog:** https://getsharex.com/changelog#$env:GITHUB_REF_NAME`r`n`r`n$output"
-          }
-          echo $output
-          Set-Content -Path "${{ env.RELEASE_BODY_PATH }}" -Value "$output" -NoNewline
-
-      - name: Release (Dev)
-        env:
-          CUSTOM_GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
-        if: env.CUSTOM_GITHUB_TOKEN != '' && env.REPO_DEV_BUILDS != '' && github.ref == 'refs/heads/develop'
-        uses: softprops/action-gh-release@975c1b265e11dd76618af1c374e7981f9a6ff44a
-        with:
-          repository: ${{ env.REPO_DEV_BUILDS }}
-          token: ${{ env.CUSTOM_GITHUB_TOKEN }}
-          tag_name: v${{ env.APP_VERSION }}
-          name: ShareX ${{ env.APP_VERSION }} Dev
-          body_path: ${{ env.RELEASE_BODY_PATH }}
-          draft: false
-          prerelease: false
-          files: |
-            Output/ShareX-${{ env.APP_VERSION }}-setup.exe
-            Output/ShareX-${{ env.APP_VERSION }}-portable.zip
-            Output/ShareX-${{ env.APP_VERSION }}-debug.zip
-            Output/ShareX-${{ env.APP_VERSION }}-Steam.zip
-            Output/ShareX-${{ env.APP_VERSION }}.appx
-            Output/ShareX-${{ env.APP_VERSION }}-debug.appx
-
-      - name: Release (Stable)
-        env:
-          CUSTOM_GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
-        if: env.CUSTOM_GITHUB_TOKEN != '' && startsWith(github.ref, 'refs/tags/v')
-        uses: softprops/action-gh-release@975c1b265e11dd76618af1c374e7981f9a6ff44a
-        with:
-          repository: ${{ github.repository }}
-          token: ${{ env.CUSTOM_GITHUB_TOKEN }}
-          tag_name: ${{ github.ref_name }}
-          name: ShareX ${{ env.APP_VERSION }}
-          body_path: ${{ env.RELEASE_BODY_PATH }}
-          draft: false
-          prerelease: true
-          files: |
-            Output/ShareX-${{ env.APP_VERSION }}-setup.exe
-            Output/ShareX-${{ env.APP_VERSION }}-portable.zip
